# MenuProject

./: .gitignore  CMakeLists.txt
File/: CMakeLists.txt  file.c  file.h
Main/: main.c  program
Menu/: CMakeLists.txt  menu.c  menu.h
Utility/: CMakeLists.txt  utility.c  utility.h
